# srp-common

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: gh_action.yml
app/: BUILD.bazel  apogee.cpp  apogee_detector_test.cc  main.cpp  testy.cpp
csvReader/: BUILD.bazel
data/: BUILD.bazel  accelerometer.csv
data/dane_nr_2/: barometer.csv
lib/: ApogeeDetector.h  BUILD.bazel  DataLoader.cpp  DataLoader.h  KalmanFilter.cpp  KalmanFilter.h  KalmanFilterR7.cpp  KalmanFilterR7.h  Matrix.cpp  Matrix.h
tools/build_all/: build_all.sh
tools/cpplint/: cpplint.sh  user_cpplint.sh
tools/ut/: unittest.sh
