module(
    name = "bazel_apogeum",
    version = "0.1.0",
)

bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "rules_cc", version = "0.0.17")

# Importujemy regułę do pobierania paczek
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "moje_wielkie_dane",
    url = "https://github.com/Simba-Avionic/srp-common/releases/download/v1.0/data.zip",
    integrity = "sha256-1vPb5VyAvPpXCEAbIfftT7OJgjA9yYpdkZSrbALR3Jw=", 
    patch_cmds = [
        "rm -f data/BUILD.bazel data/BUILD",
    ],
    build_file_content = """
filegroup(
    name = "data_files",
    srcs = glob([
        "**/*.csv",
        "**/*.txt",
    ]),
    visibility = ["//visibility:public"],
)
    """,
)