load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = ["//lib:apogee_lib"],
    data = ["//data:data_files"],
)

cc_binary(
    name = "csv_apogee_test",
    srcs = ["apogee.cpp"],
    deps = ["//lib:apogee_lib"],
    data = ["//data:data_files"],
)
cc_binary(
    name = "testy",
    srcs = ["testy.cpp"],
    data = [
        ":csv_apogee_test",  
    ],
)