load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "apogee_lib",
    srcs = [
        "KalmanFilter.cpp",
        "KalmanFilterR7.cpp",
        "Matrix.cpp",
        "DataLoader.cpp"
    ],
    hdrs = [
        "KalmanFilter.h",
        "KalmanFilterR7.h",
        "ApogeeDetector.h",
        "Matrix.h",
        "DataLoader.h"
    ],
    deps = [
        "//csvReader:csvReader",
    ],
    visibility = ["//visibility:public"],
)